# directed_exploration

./: CMakeLists.txt  mainpage.dox  manifest.xml
include/directed_exploration/: de_planner.h  de_planner.h~  util.h
include/directed_exploration/mapprocessing/: mapexception.h  mapimage.h  mapimage.h~  ogmap.h~  pointset.h
launch/: de_planner.launch  de_planner.launch~
launch/backup/: de_planner-14-01-2013.launch
src/: de_node.cpp  de_planner.cpp  de_planner.cpp~  mapexception.cpp  mapimage.cpp  mapimage.cpp~  ogmap.cpp  ogmap.cpp~  pointset.cpp
